--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
   /*========== Colors ==========*/
   /*Color mode HSL(hue, saturation, lightness)*/
-  --bg-color: hsla(241, 92%, 48%, 0.753);
+  --bg-color: hsla(241, 37%, 39%, 0.753);
   --bg-color-light: hsl(222, 81%, 69%);
   --title-color: hsl(0, 0%, 0%);
   --text-color: hsl(0, 0%, 0%);
@@ -193,7 +193,7 @@ img {
 }
 
 .home{
-  background: linear-gradient(blue, navy);
+  background: linear-gradient(rgba(0, 0, 255, 0.39), rgba(0, 0, 128, 0.534));
   box-shadow: inset 0 0 3rem rgba(0, 0, 0, 0.5);
   overflow: hidden;
   transition: .4s; /* For animation dark mode */
